--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,13 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+@import url('./hero.css');
+@import url('./books.css');
+@import url('./feedbacks.css');
+@import url('./events.css');
+@import url('./article.css');
+@import url('./location.css');
 @import url('./footer.css');
+@import url('./fonts.css');
+
+@import 'node_modules/modern-normalize/modern-normalize.css';
