--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,5 +20,8 @@
 @import url('./location.css');
 @import url('./footer.css');
 @import url('./fonts.css');
+@import url('./book-modal.css');
+@import url('./contact-modal.css');
+@import url('./fonts.css');
 
 @import 'node_modules/modern-normalize/modern-normalize.css';
