--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,74 +1,70 @@
-
-    <section class="hero">
-      <div class="container">
-        <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
-        <a href="#books" class="button hero-button">Shop Now!</a>
-        <div class="hero-slider">
-          <ul class="hero-banners">
-            <li class="hero-banner-item active" data-banner="1">
-              <picture>
-                <source srcset="./img/hero-img/hero-banner-1-x1.webp 1x, ./img/hero-img/hero-banner-1-x2.webp 2x" type="image/webp">
-                <img src="./img/hero-img/hero-banner-1-x1.jpg"
-                  srcset="./img/hero-img/hero-banner-1-x1.jpg 1x, ./img/hero-img/hero-banner-1-x2.jpg 2x" alt="Книга та чашка кави"
-                  class="hero-banner-image">
-              </picture>
-              <div class="banner-content">
-                <p class="banner-text">Get 10% off your first order!</p>
-              </div>
-            </li>
-            <li class="hero-banner-item" data-banner="2">
-              <picture>
-                <source srcset="./img/hero-img/hero-banner-2-x1.webp 1x, ./img/hero-img/hero-banner-2-x2.webp 2x" type="image/webp">
-                <img src="./img/hero-img/hero-banner-2-x1.jpg"
-                  srcset="./img/hero-img/hero-banner-2-x1.jpg 1x, ./img/hero-img/hero-banner-2-x2.jpg 2x"
-                  alt="Окуляри та розкрита книга" class="hero-banner-image">
-              </picture>
-              <div class="banner-content">
-                <p class="banner-text">Save 15% on some books!</p>
-              </div>
-            </li>
-            <li class="hero-banner-item" data-banner="3">
-              <picture>
-                <source srcset="./img/hero-img/hero-banner-3-x1.webp 1x, ./img/hero-img/hero-banner-3-x2.webp 2x" type="image/webp">
-                <img src="./img/hero-img/hero-banner-3-x1.jpg"
-                  srcset="./img/hero-img/hero-banner-3-x1.jpg 1x, ./img/hero-img/hero-banner-3-x2.jpg 2x" alt="Книжкова полиця"
-                  class="hero-banner-image">
-              </picture>
-              <div class="banner-content">
-                <p class="banner-text">Up to 40% off summer reads!</p>
-              </div>
-            </li>
-            <li class="hero-banner-item" data-banner="4">
-              <picture>
-                <source srcset="./img/hero-img/hero-banner-4-x1.webp 1x, ./img/hero-img/hero-banner-4-x2.webp 2x" type="image/webp">
-                <img src="./img/hero-img/hero-banner-4-x1.jpg"
-                  srcset="./img/hero-img/hero-banner-4-x1.jpg 1x, ./img/hero-img/hero-banner-4-x2.jpg 2x"
-                  alt="Людина читає книгу на траві" class="hero-banner-image">
-              </picture>
-              <div class="banner-content">
-                <p class="banner-text">Last chance to buy your spring bestsellers!</p>
-              </div>
-            </li>
-          </ul>
-          <div class="slider-controls">
-            <button type="button" class="slider-button prev-button" disabled aria-label="Попередній банер">
-              <svg width="48" height="48">
-                <use href="./img/symbol-defs.svg#icon-left-arrow-alt"></use>
-              </svg>
-            </button>
-            <button type="button" class="slider-button next-button" aria-label="Наступний банер">
-              <svg width="48" height="48">
-                <use href="./img/symbol-defs.svg#icon-right-arrow-alt"></use>
-              </svg>
-            </button>
+<section class="hero">
+  <div class="container">
+    <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
+    <a href="#books" class="button hero-button">Shop Now!</a>
+    <div class="hero-slider">
+      <ul class="hero-banners">
+        <li class="hero-banner-item active" data-banner="1">
+          <picture>
+            <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
+              type="image/png">
+            <img src="/img/hero-img/hero-banner-1-x1.png"
+              srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
+              alt="Книга та чашка кави" class="hero-banner-image">
+          </picture>
+          <div class="banner-content">
+            <p class="banner-text">Get 10% off your first order!</p>
           </div>
-        </div>
+        </li>
+        <li class="hero-banner-item" data-banner="2">
+          <picture>
+            <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
+              type="image/png">
+            <img src="/img/hero-img/hero-banner-2-x1.png"
+              srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
+              alt="Окуляри та розкрита книга" class="hero-banner-image">
+          </picture>
+          <div class="banner-content">
+            <p class="banner-text">Save 15% on some books!</p>
+          </div>
+        </li>
+        <li class="hero-banner-item" data-banner="3">
+          <picture>
+            <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
+              type="image/png">
+            <img src="/img/hero-img/hero-banner-3-x1.png"
+              srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
+              alt="Книжкова полиця" class="hero-banner-image">
+          </picture>
+          <div class="banner-content">
+            <p class="banner-text">Up to 40% off summer reads!</p>
+          </div>
+        </li>
+        <li class="hero-banner-item" data-banner="4">
+          <picture>
+            <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero-img/hero-banner-4-x2.png 2x"
+              type="image/png">
+            <img src="/img/hero-img/hero-banner-4-x1.png"
+              srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero-img/hero-banner-4-x2.png 2x"
+              alt="Людина читає книгу на траві" class="hero-banner-image">
+          </picture>
+          <div class="banner-content">
+            <p class="banner-text">Last chance to buy your spring bestsellers!</p>
+          </div>
+        </li>
+      </ul>
+      <div class="slider-controls">
+        <button type="button" class="slider-button prev-button" disabled aria-label="Попередній банер">
+          <svg width="48" height="48">
+            <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
+          </svg>
+        </button>
+        <button type="button" class="slider-button next-button" aria-label="Наступний банер">
+          <svg width="48" height="48">
+            <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
+          </svg>
+        </button>
       </div>
-    </section>
-  
-  <script src="./js/hero-slider.js"></script>
-
-  
-
-
-
+    </div>
+  </div>
+</section>
