--- a/src/partials/article.html
+++ b/src/partials/article.html
@@ -1,3 +1,36 @@
 <section>
-  <div class="container"></div>
+  <div class="container">
+    <div class="article-wrapper">
+      <div class="text-block">
+        <h1 class="article-title">
+          Welcome to Booksy – your cozy corner for handpicked reads.
+        </h1>
+        <p class="article-text">
+          We believe books are more than just stories — they’re companions,
+          doorways, and memories. Whether you’re chasing adventures or quiet
+          moments, we’re here to help you find your next favorite book.
+        </p>
+      </div>
+      <div class="image-wrapper">
+        <img
+          src="/img/article-img/bookstore-mobile@1x.jpg"
+          srcset="
+            /img/article-img/bookstore-mobile@1x.jpg   343w,
+            /img/article-img/bookstore-mobile@2x.jpg   686w,
+            /img/article-img/bookstore-tablet@1x.jpg   704w,
+            /img/article-img/bookstore-tablet@2x.jpg  1408w,
+            /img/article-img/bookstore-desktop@1x.jpg  640w,
+            /img/article-img/bookstore-desktop@2x.jpg 1280w
+          "
+          sizes="
+    (min-width: 1440px) 640px,
+    (min-width: 768px) 704px,
+    343px
+  "
+          alt="Cozy library with man reading"
+          class="bookstore-img"
+        />
+      </div>
+    </div>
+  </div>
 </section>
