--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,77 +1,90 @@
-<section class="hero">
-  <div class="container">
-    <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
-    <a href="#books" class="button hero-button" aria-label="Shop Now!">Shop Now!</a>
+<!DOCTYPE html>
+<html lang="uk">
 
-    <div class="hero-slider swiper">
-      <ul class="hero-banners swiper-wrapper">
-        <li class="hero-banner-item swiper-slide" data-banner="1">
-          <picture>
-            <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
-              type="image/png">
-            <img src="/img/hero-img/hero-banner-1-x1.png"
-              srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
-              alt="Книга та чашка кави" class="hero-banner-image">
-          </picture>
-          <div class="banner-content">
-            <p class="banner-text">Get 10% off your first order!</p>
-            <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-          </div>
-        </li>
-        <li class="hero-banner-item swiper-slide" data-banner="2">
-          <picture>
-            <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
-              type="image/png">
-            <img src="/img/hero-img/hero-banner-2-x1.png"
-              srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
-              alt="Окуляри та розкрита книга" class="hero-banner-image">
-          </picture>
-          <div class="banner-content">
-            <p class="banner-text">Save 15% on some books!</p>
-            <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-          </div>
-        </li>
-        <li class="hero-banner-item swiper-slide" data-banner="3">
-          <picture>
-            <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
-              type="image/png">
-            <img src="/img/hero-img/hero-banner-3-x1.png"
-              srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
-              alt="Книжкова полиця" class="hero-banner-image">
-          </picture>
-          <div class="banner-content">
-            <p class="banner-text">Up to 40% off summer reads!</p>
-            <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-          </div>
-        </li>
-        <li class="hero-banner-item swiper-slide" data-banner="4">
-          <picture>
-            <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero-img/hero-banner-4-x2.png 2x"
-              type="image/png">
-            <img src="/img/hero-img/hero-banner-4-x1.png"
-              srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero/hero-banner-4-x2.png 2x"
-              alt="Людина читає книгу на траві" class="hero-banner-image">
-          </picture>
-          <div class="banner-content">
-            <p class="banner-text">Last chance to buy your spring bestsellers!</p>
-            <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-          </div>
-        </li>
-      </ul>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booksey</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <section class="hero">
+    <div class="container">
+      <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
+
+      <div class="hero-slider swiper">
+        <ul class="hero-banners swiper-wrapper">
+          <li class="hero-banner-item swiper-slide">
+            <picture>
+              <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
+                type="image/png">
+              <img src="/img/hero-img/hero-banner-1-x1.png" alt="Книга та чашка кави" class="hero-banner-image">
+            </picture>
+            <div class="banner-content">
+              <p class="banner-text">Get 10% off your first order!</p>
+              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
+            </div>
+          </li>
+          <li class="hero-banner-item swiper-slide">
+            <picture>
+              <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
+                type="image/png">
+              <img src="/img/hero-img/hero-banner-2-x1.png" alt="Окуляри та розкрита книга" class="hero-banner-image">
+            </picture>
+            <div class="banner-content">
+              <p class="banner-text">Save 15% on some books!</p>
+              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
+            </div>
+          </li>
+          <li class="hero-banner-item swiper-slide">
+            <picture>
+              <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
+                type="image/png">
+              <img src="/img/hero-img/hero-banner-3-x1.png" alt="Книжкова полиця" class="hero-banner-image">
+            </picture>
+            <div class="banner-content">
+              <p class="banner-text">Up to 40% off summer reads!</p>
+              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
+            </div>
+          </li>
+          <li class="hero-banner-item swiper-slide">
+            <picture>
+              <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero/hero-banner-4-x2.png 2x"
+                type="image/png">
+              <img src="/img/hero-img/hero-banner-4-x1.png" alt="Людина читає книгу на траві" class="hero-banner-image">
+            </picture>
+            <div class="banner-content">
+              <p class="banner-text">Last chance to buy your spring bestsellers!</p>
+              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
+            </div>
+          </li>
+        </ul>
+      </div>
 
       <div class="slider-controls">
         <button type="button" class="slider-button prev-button swiper-button-prev" aria-label="Попередній банер">
-          <svg width="48" height="48">
-            <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
+          <svg width="24" height="24" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
           </svg>
         </button>
-        <div class="current-banner-text"></div>
+
+        <div class="slider-banner-text"></div>
+
         <button type="button" class="slider-button next-button swiper-button-next" aria-label="Наступний банер">
-          <svg width="48" height="48">
-            <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
+          <svg width="24" height="24" viewBox="0 0 24 24">
+            <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z" />
           </svg>
         </button>
       </div>
+
     </div>
-  </div>
-</section>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script type="module" src="main.js"></script>
+</body>
+
+</html>
