--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,4 +1,3 @@
-
 <section class="feedbacks-section">
   <div class="container">
     <h2 class="feedback-title">Customer Feedbacks</h2>
@@ -73,7 +72,7 @@
                 /img/feedbacks/micahel.png    1x,
                 /img/feedbacks/michael@2x.png 2x
               "
-              alt="John"
+              alt="Michael"
             />
             <div>
               <h3 class="name-title">Michael Brown</h3>
@@ -100,4 +99,3 @@
     </div>
   </div>
 </section>
-
