--- a/src/partials/article.html
+++ b/src/partials/article.html
@@ -1,4 +1,4 @@
-<section>
+<section class="article-section">
   <div class="container">
     <div class="article-wrapper">
       <div class="text-block">
