--- a/src/partials/article.html
+++ b/src/partials/article.html
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="article-wrapper">
       <div class="text-block">
-        <h1 class="article-title">
-          Welcome to Booksy – your cozy corner for handpicked reads.
-        </h1>
+        <h2 class="article-title">
+          Welcome to Booksy - your cozy corner for handpicked reads.
+        </h2>
         <p class="article-text">
-          We believe books are more than just stories — they’re companions,
-          doorways, and memories. Whether you’re chasing adventures or quiet
-          moments, we’re here to help you find your next favorite book.
+          We believe books are more than just stories — they&#39;re companions,
+          doorways, and memories. Whether you&#39;re chasing adventures or quiet
+          moments, we&#39;re here to help you find your next favorite book.
         </p>
       </div>
       <div class="image-wrapper">
