--- a/src/css/location.css
+++ b/src/css/location.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 32px;
 }
 
 .location-text {
@@ -41,6 +41,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
+  margin-bottom: 35px;
 }
 
 .contacts-list {
@@ -92,6 +93,9 @@
 @media (min-width: 768px) {
   .location-block {
     gap: 32px;
+  }
+  .location-block {
+    margin-bottom: 80px;
   }
 }
 @media (min-width: 1440px) {
