--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-<html lang="uk">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booksey</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="/path/to/your/favicon.ico" type="image/x-icon">
-</head>
-
-<body>
 
   <section class="hero">
     <div class="container">
-      <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
-
       <div class="hero-slider swiper">
         <ul class="hero-banners swiper-wrapper">
           <li class="hero-banner-item swiper-slide">
             <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
               <picture>
-                <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
-                  type="image/png">
-                <img src="/img/hero-img/hero-banner-1-x1.png" alt="Акційний банер: Знижка 10% на перше замовлення"
+                <source
+                  srcset="/img/hero-img/hero-banner-1-x1-deskt.png 1x, /img/hero-img/hero-banner-1-x2-deskt.png 2x"
+                  media="(min-width: 1440px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-1-x1-lpt.png 1x, /img/hero-img/hero-banner-1-x2-lpt.png 2x"
+                  media="(min-width: 768px) and (max-width: 1439px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-1-x1-mob.png 1x, /img/hero-img/hero-banner-1-x2-mob.png 2x"
+                  media="(max-width: 767px)" type="image/png">
+                <img src="/img/hero-img/hero-banner-1-x1-deskt.png" alt="Акційний банер: Знижка 10% на перше замовлення"
                   class="hero-banner-image">
               </picture>
             </a>
@@ -31,9 +21,14 @@
           <li class="hero-banner-item swiper-slide">
             <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
               <picture>
-                <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
-                  type="image/png">
-                <img src="/img/hero-img/hero-banner-2-x1.png" alt="Акційний банер: Знижка 15% на деякі книги"
+                <source
+                  srcset="/img/hero-img/hero-banner-2-x1-deskt.png 1x, /img/hero-img/hero-banner-2-x2-deskt.png 2x"
+                  media="(min-width: 1440px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-2-x1-lpt.png 1x, /img/hero-img/hero-banner-2-x2-lpt.png 2x"
+                  media="(min-width: 768px) and (max-width: 1439px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-2-x1-mob.png 1x, /img/hero-img/hero-banner-2-x2-mob.png 2x"
+                  media="(max-width: 767px)" type="image/png">
+                <img src="/img/hero-img/hero-banner-2-x1-deskt.png" alt="Акційний банер: Знижка 15% на деякі книги"
                   class="hero-banner-image">
               </picture>
             </a>
@@ -41,9 +36,14 @@
           <li class="hero-banner-item swiper-slide">
             <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
               <picture>
-                <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
-                  type="image/png">
-                <img src="/img/hero-img/hero-banner-3-x1.png" alt="Акційний банер: До 40% на літні читання"
+                <source
+                  srcset="/img/hero-img/hero-banner-3-x1-deskt.png 1x, /img/hero-img/hero-banner-3-x2-deskt.png 2x"
+                  media="(min-width: 1440px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-3-x1-lpt.png 1x, /img/hero-img/hero-banner-3-x2-lpt.png 2x"
+                  media="(min-width: 768px) and (max-width: 1439px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-3-x1-mob.png 1x, /img/hero-img/hero-banner-3-x2-mob.png 2x"
+                  media="(max-width: 767px)" type="image/png">
+                <img src="/img/hero-img/hero-banner-3-x1-deskt.png" alt="Акційний банер: До 40% на літні читання"
                   class="hero-banner-image">
               </picture>
             </a>
@@ -51,36 +51,38 @@
           <li class="hero-banner-item swiper-slide">
             <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
               <picture>
-                <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero-img/hero-banner-4-x2.png 2x"
-                  type="image/png">
-                <img src="/img/hero-img/hero-banner-4-x1.png"
+                <source
+                  srcset="/img/hero-img/hero-banner-4-x1-deskt.png 1x, /img/hero-img/hero-banner-4-x2-deskt.png 2x"
+                  media="(min-width: 1440px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-4-x1-lpt.png 1x, /img/hero-img/hero-banner-4-x2-lpt.png 2x"
+                  media="(min-width: 768px) and (max-width: 1439px)" type="image/png">
+                <source srcset="/img/hero-img/hero-banner-4-x1-mob.png 1x, /img/hero-img/hero-banner-4-x2-mob.png 2x"
+                  media="(max-width: 767px)" type="image/png">
+                <img src="/img/hero-img/hero-banner-4-x1-deskt.png"
                   alt="Акційний банер: Останній шанс купити весняні бестселери" class="hero-banner-image">
               </picture>
             </a>
           </li>
         </ul>
-        <div class="swiper-button-prev">
-          <svg width="24" height="24" viewBox="0 0 24 24">
-            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
-          </svg>
-        </div>
-        <div class="swiper-button-next">
-          <svg width="24" height="24" viewBox="0 0 24 24">
-            <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z" />
-          </svg>
+      </div>
+
+      <div class="slider-bottom-controls">
+        <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
+        <div class="slider-navigation-buttons">
+          <button type="button" class="slider-button prev-button swiper-button-prev" aria-label="Попередній банер">
+            <svg width="24" height="24">
+              <use href="./img/hero-img/icon-hero.svg#icon-left"></use>
+            </svg>
+          </button>
+          <button type="button" class="slider-button next-button swiper-button-next" aria-label="Наступний банер">
+            <svg width="24" height="24">
+              <use href="./img/hero-img/icon-hero.svg#icon-rigth"></use>
+            </svg>
+          </button>
         </div>
       </div>
+
     </div>
   </section>
 
-  <section id="books" class="books">
-    <h2 class="visually-hidden">Trending books</h2>
-    <p class="books-subtitle">Books</p>
-    <p class="books-count">Showing 32 of 100</p>
-  </section>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script type="module" src="main.js"></script>
-</body>
-
-</html>
+  
