--- a/src/partials/book-moda.html
+++ b/src/partials/book-moda.html
@@ -1,1 +1,7 @@
-<div class="container"></div>
+<div class="modal modal-books">
+    <div class="container">
+        <div class="modal-content">
+
+        </div>
+    </div>
+    </div>
