--- a/src/partials/books.html
+++ b/src/partials/books.html
@@ -1,3 +1,27 @@
-<section>
-  <div class="container"></div>
+<section class="books">
+  <h1>Trending books</h1>
+  <div class="container">
+    <div class="books-wrapper">
+      <div class="categories-books js-listener-categories">
+        <div class="container-categories js-container">
+          <div class="books-subtitle-placeholder">
+            <h2>Books</h2>
+            <div>Showing <span class="current-number-books"></span>&nbsp;of&nbsp;<span class="total-number-books"></span></div>
+          </div>
+          <ul class="list categories js-list-categories">
+            <li class="item" data-name="top-books" tabindex="0">All categories</li>
+          </ul>
+        </div>
+      </div>
+
+
+      <div class="books-list-placeholder">
+      <ul class="list list-books js-list-books all-books-show"></ul>
+      <span class="loader"></span>
+      <button type="button" class="load-more">Load more</button>
+      </div>
+    </div>
+    
+  </div>
+
 </section>
