--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -1,172 +1,103 @@
 <section class="events-section">
-  <div class="container events-container">
-    <div class="events-wrapper">
-      <p class="events-section-title">Events</p>
-      <h2 class="events-title">Upcoming Events at Booksy</h2>
-      <p class="events-description">
-        Discover readings, workshops, and bookish gatherings — online and
-        offline. Everyone’s welcome.
-      </p>
-    </div>
+  <div class="container">
+    <div class="location-title">Events</div>
+    <h2 class="events-heading">Upcoming Events at Booksy</h2>
+    <p class="location-description">
+      Discover readings, workshops, and bookish gatherings — online and offline.
+      Everyone&#39;s welcome.
+    </p>
 
-    <div class="events-gallery swiper">
+    <div class="swiper">
+      <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <!-- Slides -->
+        <div class="swiper-slide events-slide">
+          <img
+            class="swiper-img"
+            srcset="
+              /img/events-images/events-card1@1x.png 1x,
+              /img/events-images/events-card1@2x.png 2x
+            "
+            alt="events-photo width reading people"
+          />
           <div>
-            <picture>
-              <source
-                srcset="
-                  ../img/events-images/events-card1@1x.png 1x,
-                  ../img/events-images/events-card1@2x.png 2x
-                "
-                media="(min-width: 1280px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card1@1x.png 1x,
-                  ../img/events-images/events-card1@2x.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card1@1x.png 1x,
-                  ../img/events-images/events-card1@2x.png 2x
-                "
-                media="(max-width: 768px)"
-              />
-              <img
-                src="../img/events-images/events-card1@1x.png"
-                alt="Cozy Book Club"
-                id="card1"
-              />
-            </picture>
-            <div class="events-card-info-wrapper1">
-              <h3 class="events-subtitle">
-                Cozy Book Club — “The Midnight Library”
-              </h3>
-              <p class="events-card-date">In-store | June 5, 6:30 PM</p>
-              <p class="events-card-description">
-                Join us for an evening of tea, thoughtful conversation, and
-                shared reflections as we dive into Matt Haig’s bestseller.
-              </p>
-            </div>
-            <a class="events-card-link" id="card-link1" href="">
+            <h3 class="event-name">Cozy Book Club — “The Midnight Library”</h3>
+            <p class="event-description date">In-store | June 5, 6:30 PM</p>
+            <p class="event-description text">
+              Join us for an evening of tea, thoughtful conversation, and shared
+              reflections as we dive into Matt Haig’s bestseller.
+            </p>
+            <button class="reg-btn">
               Register
-              <svg class="" width="24" height="24">
-                <use href="../img/symbol-defs.svg#icon-chevron-right"></use>
+              <svg class="ev-btn" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
               </svg>
-            </a>
+            </button>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide events-slide">
+          <img
+            class="swiper-img"
+            srcset="
+              /img/events-images/events-card2@1x.png 1x,
+              /img/events-images/events-card2@2x.png 2x
+            "
+            alt="Jane"
+          />
           <div>
-            <picture>
-              <source
-                srcset="
-                  ../img/events-images/events-card2@1x.png 1x,
-                  ../img/events-images/events-card2@2x.png 2x
-                "
-                media="(min-width: 1440px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card2@1x.png 1x,
-                  ../img/events-images/events-card2@2x.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card2@1x.png 1x,
-                  ../img/events-images/events-card2@2x.png 2x
-                "
-                media="(max-width: 768px)"
-              />
-              <img
-                src="../img/events-images/events-card2@1x.png"
-                alt="Book Cover Design Workshop"
-                id="card2"
-              />
-            </picture>
-            <div class="events-card-info-wrapper2">
-              <h3 class="events-subtitle">Book Cover Design Workshop</h3>
-              <p class="events-card-date">Online | June 12, 7:00 PM</p>
-              <p class="events-card-description">
-                A hands-on session for aspiring designers and curious readers.
-                Learn what makes a cover stand out — from concept to print.
-              </p>
-            </div>
-            <a class="events-card-link" id="card-link2" href="">
+            <h3 class="event-name">Cozy Book Club — “The Midnight Library”</h3>
+            <p class="event-description date">In-store | June 5, 6:30 PM</p>
+            <p class="event-description text">
+              Join us for an evening of tea, thoughtful conversation, and shared
+              reflections as we dive into Matt Haig’s bestseller.
+            </p>
+            <button class="reg-btn">
               Register
-              <svg class="" width="24" height="24">
-                <use href="../img/symbol-defs.svg#icon-chevron-right"></use>
+              <svg class="ev-btn" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
               </svg>
-            </a>
+            </button>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide events-slide">
+          <img
+            class="swiper-img"
+            srcset="
+              /img/events-images/events-card3@1x.png 1x,
+              /img/events-images/events-card3@2x.png 2x
+            "
+            alt="Jane"
+          />
           <div>
-            <picture>
-              <source
-                srcset="
-                  ../img/events-images/events-card3@1x.png 1x,
-                  ../img/events-images/events-card3@2x.png 2x
-                "
-                media="(min-width: 1280px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card3@1x.png 1x,
-                  ../img/events-images/events-card3@2x.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                  ../img/events-images/events-card3@1x.png 1x,
-                  ../img/events-images/events-card3@2x.png 2x
-                "
-                media="(max-width: 768px)"
-              />
-              <img
-                src="../img/events-images/events-card3@1x.png"
-                alt="Children’s Story Hour"
-                id="card3"
-              />
-            </picture>
-            <div class="events-card-info-wrapper3">
-              <h3 class="events-subtitle">Children’s Story Hour</h3>
-              <p class="events-card-date">In-store | June 15, 11:00 AM</p>
-              <p class="events-card-description">
-                A magical morning of stories, games, and imagination for our
-                youngest book lovers (ages 4–8).
-              </p>
-            </div>
-            <a class="events-card-link" id="card-link3" href=""
-              >Register
-              <svg class="" width="24" height="24">
-                <use href="../img/symbol-defs.svg#icon-chevron-right"></use>
+            <h3 class="event-name">Cozy Book Club — “The Midnight Library”</h3>
+            <p class="event-description date">In-store | June 5, 6:30 PM</p>
+            <p class="event-description text">
+              Join us for an evening of tea, thoughtful conversation, and shared
+              reflections as we dive into Matt Haig’s bestseller.
+            </p>
+            <button class="reg-btn">
+              Register
+              <svg class="ev-btn" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
               </svg>
-            </a>
+            </button>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="events-interactive-wrapper">
-      <div class="events-dots-wrapper swiper-pagination"></div>
-      <div class="events-arrows-wrapper">
-        <button class="events-arrow button-prev">
-          <svg class="" width="24" height="24">
-            <use href="../img/symbol-defs.svg#icon-left-arrow-alt"></use>
+      <div class="feedback-nav-wrapper event-btn">
+        <div class="my-swiper"></div>
+
+        <div class="swiper-button-prev scroll-btn">
+          <svg class="arrow-nav" width="24" height="24">
+            <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
           </svg>
-        </button>
-        <button class="events-arrow button-next">
-          <svg class="" width="24" height="24">
-            <use href="../img/symbol-defs.svg#icon-right-arrow-alt"></use>
+        </div>
+        <div class="swiper-button-next scroll-btn">
+          <svg class="arrow-nav" width="24" height="24">
+            <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
           </svg>
-        </button>
+        </div>
       </div>
     </div>
   </div>
