--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,18 +21,21 @@
         </ul>
       </div>
       <div class="footer-part-second">
-        <h3 class="title-footer">Join</h3>
         <form class="footer-form">
-          <input
-            type="email"
-            name="footer-input"
-            placeholder="Enter your email"
-            class="footer-input"
-            required
-            pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-          />
-          <span id="errorMessage" style="color: red" hidden>Error text</span>
-          <button type="submit" class="footer-btn">Sign Up</button>
+          <label class="title-footer" for="email">Join</label>
+          <div class="input-btn-wrap">
+            <input
+              type="email"
+              name="footer-input"
+              placeholder="Enter your email"
+              class="footer-input"
+              required
+              id="email"
+              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+            />
+            <span id="errorMessage" style="color: red" hidden>Error text</span>
+            <button type="submit" class="footer-btn">Sign Up</button>
+          </div>
         </form>
         <span class="footer-span-requried">* Required field </span>
       </div>
